--- a/part2/phonebook/src/App.css
+++ b/part2/phonebook/src/App.css
@@ -2,3 +2,13 @@
     display: flex;
     align-items: center;
 }
+
+.success-msg{
+    color: green;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
