--- a/part2/phonebook/src/App.css
+++ b/part2/phonebook/src/App.css
@@ -12,3 +12,13 @@
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.error-msg{
+    color: red;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
